# black-friday-pipeline

./: docker-compose.yaml  pyproject.toml  requirements.txt
collector/manifests/: deployment.yaml  service.yaml
collector/src/: app.py
collector/src/helpers/: validator.py
collector/src/schema/: schema.py
kubernetes/manifests/: namespace.yaml
producer/manifests/: pods.yaml
producer/src/: app.py
producer/src/config/: constants.py
sourcer/src/: app.py
sourcer/src/config/: config.py  constants.py
sourcer/src/helpers/: sourcer.py
